plugins {
    alias(libs.plugins.android.application)
}
def getIpAddress() {
    Properties properties = new Properties()
    properties.load(project.rootProject.file('local.properties').newDataInputStream())
    return properties.getProperty('ip_addr')
}

android {
    namespace 'rs.ac.uns.eventplanner.team7'
    compileSdk 34

    defaultConfig {
        applicationId "rs.ac.uns.eventplanner.team7"
        minSdk 34
        targetSdk 34
        versionCode 1
        versionName "1.0"
        android.buildFeatures.buildConfig true
        buildConfigField "String", "IP_ADDR", "\"" + getIpAddress()+"\""
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
    buildFeatures {
        viewBinding true
    }
}

dependencies {

    androidTestImplementation libs.ext.junit
    androidTestImplementation libs.espresso.core
    annotationProcessor libs.lombok
    implementation libs.activity
    implementation libs.annotation
    implementation libs.appcompat
    implementation libs.constraintlayout
    implementation libs.converter.gson
    implementation libs.core.splashscreen
    implementation libs.jjwt.api
    implementation libs.lombok
    implementation libs.lifecycle.livedata.ktx
    implementation libs.lifecycle.viewmodel.ktx
    implementation libs.logging.interceptor
    implementation libs.material
    implementation libs.material.calendarview
    implementation libs.navigation.fragment
    implementation libs.navigation.fragment.ktx
    implementation libs.navigation.ui.ktx
    implementation libs.picasso
    implementation libs.retrofit
    implementation libs.swiperefreshlayout
    implementation libs.threetenabp
    implementation libs.stompprotocolandroid
    implementation libs.rxjava
    implementation libs.rxandroid
    runtimeOnly libs.jjwt.impl
    runtimeOnly libs.jjwt.jackson
    testImplementation libs.junit
}